--- a/Fly.IdentityServer/Pages/Account/Register/Manager.cshtml
+++ b/Fly.IdentityServer/Pages/Account/Register/Manager.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-antiforgery="true">
+        <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ManagerForRegistrationDto.FirstName" class="control-label"></label>
@@ -41,10 +41,9 @@
             </div>
             <div class="form-group">
                 <label class="control-label">Airline Id</label>
-                @Html.DropDownListFor(
-                    x=>x.ManagerForRegistrationDto.AirlineId,
-                    Model.Airlines, new { @class = "form-control" })
-
+                <select asp-for="ManagerForRegistrationDto.AirlineId" class="form-control" asp-items="Model.Airlines">
+                    <option value="">-- Select --</option>
+                </select>
                 <span asp-validation-for="ManagerForRegistrationDto.AirlineId"></span>
             </div>
             <br />
